ignore cmake-build-debug
Change-Id: I5e2550c46f4562055816f7fd2ef12e18ab3c3734

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 
 # Nested build directory
 /build*
+cmake-build-debug/
 
 #==============================================================================#
 # Explicit files to ignore (only matches one).
