turn LLVMObfuscation into a static pass plugin
Change-Id: I12786641ee3405d1beb3e3bff4f5b139926f2368

--- a/llvm/lib/Transforms/Obfuscation/CMakeLists.txt
+++ b/llvm/lib/Transforms/Obfuscation/CMakeLists.txt
@@ -1,13 +1,13 @@
-add_llvm_library(LLVMObfuscation
-        ObfuscatePlugin.cpp
-        HelloWorld.cpp
+set(LLVM_LLVMOBFUSCATION_LINK_INTO_TOOLS ON)
 
-        DEPENDS
-        intrinsics_gen
-
-        LINK_COMPONENTS
-        Core
-        Support
-        Analysis
-        TransformUtils
-        )
+if (NOT WIN32)
+    add_llvm_pass_plugin(LLVMObfuscation
+            ObfuscatePlugin.cpp
+            HelloWorld.cpp
+            DEPENDS
+            intrinsics_gen
+            BUILDTREE_ONLY
+            )
+    install(TARGETS ${name} RUNTIME DESTINATION examples)
+    set_target_properties(${name} PROPERTIES FOLDER "Examples")
+endif()
