[unavailable] add goron files and fix compile
Change-Id: Ie67ef753d1fe0d6ff266e52576cff21155f205fe

--- a/llvm/lib/Transforms/Obfuscation/CMakeLists.txt
+++ b/llvm/lib/Transforms/Obfuscation/CMakeLists.txt
@@ -4,6 +4,16 @@ if (NOT WIN32)
     add_llvm_pass_plugin(LLVMObfuscation
             ObfuscatePlugin.cpp
             HelloWorld.cpp
+            CryptoUtils.cpp
+            Utils.cpp
+            ObfuscationPassManager.cpp
+            ObfuscationOptions.cpp
+            IPObfuscationContext.cpp
+            IndirectBranch.cpp
+            IndirectCall.cpp
+            IndirectGlobalVariable.cpp
+            Flattening.cpp
+            StringEncryption.cpp
             DEPENDS
             intrinsics_gen
             BUILDTREE_ONLY
